kubernetes/manifests/gateway-api/gateway-api-nginx-controller.yaml
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: default-gateway-class
#   namespace: default
# spec:
#   controllerName: gateway.nginx.org/nginx-gateway-controller  # Make sure the ingress-nginx controller is installed in your cluster
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: nginx # check k get gatewayclasses.gateway.networking.k8s.io -n nginx-gateway # to find the correct class name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All  # This will allow routes from all namespaces, you can restrict it if needed
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mario-http-route
  namespace: default  # Ensure the namespace is specified here
spec:
  parentRefs:
    - name: test-gateway
      namespace: default  # Ensure the correct namespace here as well
  hostnames: ["mario.local"]  # This should match your Ingress hostname
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: game-service
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-mario
  labels:
    app: game-mario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-mario
  template:
    metadata:
      labels:
        app: game-mario
    spec:
      containers:
        - name: game-mario
          image: pengbai/docker-supermario
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-mario
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
